VQ-2356:Ability to view risk perils

--- a/src/app/features/gis/components/policy/components/policy-product/policy-product.component.html
+++ b/src/app/features/gis/components/policy/components/policy-product/policy-product.component.html
@@ -624,10 +624,10 @@
                          </div>
                         </div>
                         <div class=" mb-1 col-sm-4 col-12 ">
-                            <label for="branch" class="required product-label"
+                            <!-- <label for="branch" class="required product-label"
                                 id="branch">{{'gis.policy.payment_reference' |
                                 translate}}</label>
-                            <input class="form-control form-control-sm mb-1" type="text" value="" id="payment_plan">
+                            <input class="form-control form-control-sm mb-1" type="text" value="" id="payment_plan"> -->
 
                         </div>
                     </div>
