--- a/src/app/features/gis/components/policy/components/coinsuarance-details/coinsuarance-details.component.html
+++ b/src/app/features/gis/components/policy/components/coinsuarance-details/coinsuarance-details.component.html
@@ -95,7 +95,7 @@
                 <!-- Add Coinsurance Modal -->
                 <div class="modal fade" id="addCoinsurance" tabindex="-1" aria-labelledby="exampleModalLabel"
                     aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered ">
+                    <div class="modal-dialog modal-dialog-centered modal-lg ">
                         <div class="modal-content">
                             <div class="modal-body">
                                 <div class="d-flex justify-content-between align-items-center ">
@@ -109,15 +109,22 @@
                                     <span class="search-icon"><i class="fa fa-search"></i></span>
                                     <input type="text" placeholder="Search" id="search-input-Rsection" />
                                 </div>
-                                <p-table [value]="coinsuranceList" dataKey="code"
-                                    [tableStyle]="{ 'min-width': '300px' }" [paginator]="true" selectionMode="multiple"
+                                <!-- <p-table [value]="coinsuranceList" dataKey="code"
+                                [tableStyle]="{'min-width': '50rem'}" [paginator]="true" selectionMode="multiple"
                                     [(selection)]="selectedCoinsurance" styleClass="p-datatable-sm"
-                                    responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true" [rows]="10">
+                                    responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true" [rows]="10"> -->
+                                    <p-table #dt4 [value]="coinsuranceList"
+                                                        [(selection)]="selectedCoinsurance" selectionMode="multiple"
+                                                        dataKey="code" [paginator]="true" [rows]="10"
+                                                        [scrollable]="true" scrollDirection="horizontal"
+                                                        [showCurrentPageReport]="true"
+                                                        currentPageReportTemplate=" {first} - {last} of {totalRecords}">
+                                                        
                                     <ng-template pTemplate="header">
                                         <tr>
-                                            <th>{{'gis.policy.select' | translate}}</th>
-                                            <th>{{'gis.policy.short_description' | translate}}</th>
-                                            <th>{{'gis.policy.name' | translate}}</th>
+                                            <th style="width: 2%;">{{'gis.policy.select' | translate}}</th>
+                                            <th >{{'gis.policy.short_description' | translate}}</th>
+                                            <th >{{'gis.policy.name' | translate}}</th>
 
                                         </tr>
                                     </ng-template>
