--- a/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.css
+++ b/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.css
@@ -240,6 +240,12 @@
 
 #selectedInput {
     height: 25px;
+    font-family: Roboto;
+    font-size: 13px;
+    font-weight: 500;
+    line-height: 15.23px;
+    text-align: left;
+    color: #000;
 }
 
 #selectCheckbox {
@@ -251,6 +257,16 @@
     font-size: 13px;
     font-weight: 500;
     line-height: 15.23px;
+    text-align: left;
+    color: #000;
+
+}
+
+#certificateLabel {
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18.75px;
     text-align: left;
     color: #000;
 
