Policy clean-up

--- a/src/app/features/gis/components/policy/components/policy-product/policy-product.component.html
+++ b/src/app/features/gis/components/policy/components/policy-product/policy-product.component.html
@@ -583,7 +583,7 @@
                             <label for="policy_type" class=" product-label"
                                 id="policy_type">{{'gis.policy.currency_rate' | translate}}</label>
                             <input type="text" id="quote-input" formControlName="currencyRate"
-                                class="form-control form-control-sm mb-1">
+                                class="form-control form-control-sm mb-1" readonly>
 
                         </div>
                         <div class=" mb-1 col-sm-4 col-12 ">
