--- a/src/app/features/gis/components/policy/components/policy-summary-details/policy-summary-details.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary-details/policy-summary-details.component.html
@@ -47,7 +47,7 @@
                    
                 </div>
                 <div class="col-6">
-                    <p class="detail">{{product.description}}</p>
+                    <p class="detail">{{productDescription}}</p>
                 </div>
             </div>
         </div>
@@ -297,7 +297,7 @@
                     <p class="label">Client Name</p>
                 </div>
                 <div class="col-6">
-                    <p class="detail"></p>
+                    <p class="detail">{{insureds}}</p>
                     
                 </div>
             </div>
