--- a/src/app/features/gis/components/policy/components/risk-details/risk-details.component.html
+++ b/src/app/features/gis/components/policy/components/risk-details/risk-details.component.html
@@ -1717,6 +1717,8 @@
         </div>
 
         <div class="d-flex justify-content-end">
+            <button type="button" class="btn btn-primary" (click)="previous()">{{'gis.policy.previous' |
+                translate}}</button>
             <button type="button" class="btn btn-primary" (click)="next()">{{'gis.policy.next' |
                 translate}}</button>
         </div>
