--- a/src/app/features/gis/components/policy/components/coinsuarance-details/coinsuarance-details.component.html
+++ b/src/app/features/gis/components/policy/components/coinsuarance-details/coinsuarance-details.component.html
@@ -68,12 +68,12 @@
                                     <i class="fa-solid fa-plus"></i>
                                 </button>
                             </div>
-                            <div class="col-sm-3">
+                            <!-- <div class="col-sm-3">
                                 <button type="button" id="icon" class="btn btn-primary" data-bs-toggle="modal"
                                     data-bs-target="#editThirdDetails" title="Edit" >
                                     <i class="fa-solid fa-pencil"></i>
                                 </button>
-                            </div>
+                            </div> -->
                             <div class="col-sm-3">
                                 <button type="button" id="icon" class="btn btn-primary" data-bs-toggle="modal"
                                 id="openModalButtonDelete" [hidden]="true"  data-bs-target="#deleteCoinsurance" title="Delete">
@@ -450,6 +450,16 @@
 
             </div>
 
+        </div>
+        <!-- <div class="d-flex justify-content-start mb-3">
+            <button type="button" class="btn btn-primary" (click)="next()">{{'gis.policy.next' |
+                translate}}</button>
+        </div> -->
+        <div class="d-flex justify-content-end mb-3">
+            <button type="button" class="btn btn-primary" (click)="previous()">{{'gis.policy.previous' |
+                translate}}</button>
+            <button type="button" class="btn btn-primary" (click)="next()">{{'gis.policy.next' |
+                translate}}</button>
         </div>
     </div>
 
