--- a/src/app/features/gis/components/policy/components/import-risks/import-risks.component.html
+++ b/src/app/features/gis/components/policy/components/import-risks/import-risks.component.html
@@ -166,7 +166,9 @@
             </div>
         </div>
         <div class="d-flex justify-content-end mt-4">
-            <button type="button" class="btn btn-primary">{{'gis.policy.next' |
+            <button type="button" class="btn btn-primary" (click)="previous()">{{'gis.policy.previous' |
+                translate}}</button>
+            <button type="button" class="btn btn-primary" (click)="next()">{{'gis.policy.next' |
                 translate}}</button>
         </div>
     </div>
