--- a/src/app/features/gis/components/policy/components/policy-summary/policy-summary.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary/policy-summary.component.html
@@ -46,5 +46,10 @@
                     
                 </div>
             </div>
+            <div class="d-flex justify-content-end mt-4">
+                <button type="button" class="btn btn-primary" (click)="previous()">{{'gis.policy.previous' |
+                    translate}}</button>
+                
+            </div>
         
 </div>
