VQ-1943: Ability to redirect to Group admin portal landing screen

--- a/src/app/features/crm/components/system-roles/system-roles.component.html
+++ b/src/app/features/crm/components/system-roles/system-roles.component.html
@@ -87,7 +87,7 @@
                               (click)="selectRole(role)"
                             >
                             <label class="form-check-label" for="{{ role.id }}">
-                              {{ role.roleName | titlecase }}
+                              {{ role.roleName }}
                             </label>
                           </div>
                         </div>
