--- a/src/app/features/entities/components/entity/view-entity/entity-other-details/entity-other-details.component.html
+++ b/src/app/features/entities/components/entity/view-entity/entity-other-details/entity-other-details.component.html
@@ -143,7 +143,7 @@
                       </tr>
                       <tr>
                         <td>Sector</td>
-                        <th>{{ wealthAmlDetails?.sector_id }}</th>
+                        <th>{{ sector?.name }}</th>
                       </tr>
                     </tbody>
                 </table>
