VQ-2454 Stepper Navigation for Screen Transitions

--- a/src/app/features/lms/ind/components/claims/components/claims-process/claims-process.component.html
+++ b/src/app/features/lms/ind/components/claims/components/claims-process/claims-process.component.html
@@ -1,7 +1,7 @@
 <div class="main">
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
     <app-stepper
-      [currentStep]="eachStep"
+      [currentStep]="1"
       [dbStep]="dbStep"
       [stepperData]="steps"
       (stepChange)="onStepChange($event)"
