--- a/src/app/shared/components/stepper/stepper.component.html
+++ b/src/app/shared/components/stepper/stepper.component.html
@@ -5,6 +5,7 @@
   [currentStep] = currentStep
   [stepperData]="stepperData"
   [dbStep]="dbStep"
+  [stepType]="stepType"
   (stepChange)="onStepChange($event)"
   *ngIf="orientation === 'HORIZONTAL'"
 >
