--- a/src/app/features/lms/ind/components/claims/components/claims-process/claims-process.component.html
+++ b/src/app/features/lms/ind/components/claims/components/claims-process/claims-process.component.html
@@ -1,8 +1,9 @@
 <div class="main">
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
     <app-stepper
-      [currentStep]="1"
+      [currentStep]="eachStep"
       [dbStep]="dbStep"
+      [stepType]="'tab'"
       [stepperData]="steps"
       (stepChange)="onStepChange($event)"
     >
